# sct

./: .gitignore  IDEAS  LICENSE  QUESTIONS.txt  README.md  TODO.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pytest.yml
archive/: alternatives.py  election.py  old_set_preferences.py
backend/: main.py  requirements.txt
dev/: IDEAS.txt  QUESTIONS.txt
docs/meetings/: 2025-10-08.md
docs/notes/: csc-lectures.md  simulator.md  wishlist.md
frontend/: .gitignore  package-lock.json  package.json  server.js
frontend/data/: database.json
frontend/public/: app.js  index.html  manifest.json  styles.css
frontend/public/data/: candidates.json
frontend/scripts/: generate_votes.py  run_election.py
frontend/src/: App.css  App.js  CreateElection.js  index.js
sct/: __init__.py  agent.py  alternatives.py  candidates.py  election.py  elections.py  linopt.py  playground.ipynb  preferences.py  voting.py
sct/randomization/: __init__.py  preference_generator.py
sct/tests/: test_agent.py  test_candidates.py  test_election.py
sct/webapp/: app.py
