[build-system] # Check later if relevant
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sct"
version = "0.1.0" 
description = "A Python implementation of concepts from social choice theory."
readme = "README.md"
authors = [
    { name = "Timothee Boudot", email = "tboudot2@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["social choice", "voting", "condorcet", "election"] 
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22",
    "sympy",
]

[project.urls]
"Source" = "https://github.com/condorcet-disciples/sct.git"
# "Bug Tracker" = "https://github.com/yourusername/your_package_name/issues"

[project.optional-dependencies]
dev = ["pytest"] 

[tool.setuptools]
packages = ["sct"]

[tool.poetry.dependencies]
python = ">=3.9"  # Restrict to Python versions compatible with NumPy
